# slim-tracker

./: .gitignore  pyproject.toml
slim_tracker/: main.py  slim_tracker.service
